[gd_scene load_steps=3 format=3 uid="uid://bm5cxsnofcafy"]

[ext_resource type="Script" uid="uid://b2srdf5h558y3" path="res://minigames/ClickTheTarget/ClickTheTarget.gd" id="1_8yx4k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[node name="ClickTheTarget" type="Node2D"]
script = ExtResource("1_8yx4k")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.10980392, 0.12156863, 0.13333334, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="Panel" parent="UI"]
modulate = Color(0.2, 0.2, 0.3, 1)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 60.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Puntos: 0"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Tiempo: 10"
vertical_alignment = 1

[node name="TargetsLabel" type="Label" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Objetivos: 0"
vertical_alignment = 1

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "¡Consigue 100 puntos en 10 segundos!
Haz clic rápido para bonus
-5 puntos si se escapan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "TIEMPO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetsContainer" type="Node2D" parent="."]

[node name="Target" type="Area2D" parent="TargetsContainer"]
visible = false
position = Vector2(500, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetsContainer/Target"]
shape = SubResource("CircleShape2D_1")

[node name="Visual" type="Node2D" parent="TargetsContainer/Target"]

[node name="OuterCircle" type="ColorRect" parent="TargetsContainer/Target/Visual"]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 0.2, 0.2, 1)

[node name="MiddleCircle" type="ColorRect" parent="TargetsContainer/Target/Visual"]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2

[node name="InnerCircle" type="ColorRect" parent="TargetsContainer/Target/Visual"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 2
color = Color(1, 0.2, 0.2, 1)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
